cmake_minimum_required(VERSION 3.17)
project(PROG2400_701_lectures)

set(CMAKE_CXX_STANDARD 14)

add_executable(echo Echo/main.cpp)
add_executable(cmdline CommandLine/main.cpp)
add_executable(parser CommandParsing/main.cpp)
add_executable(dynarray DynamicArrays/main.cpp)
add_executable(linkedlist LinkedList/main.cpp)
add_executable(queues Queues/main.cpp Queues/Queue.cpp)
add_executable(stacks Stacks/main.cpp Stacks/MazeStack.cpp Stacks/MazeStack.h Stacks/MazePosition.cpp Stacks/MazePosition.h)
add_executable(palindrome palindrome/main.cpp)
add_executable(recursion recursion/main.cpp)
add_executable(factorial factorial/main.cpp)
add_executable(RecursivePalindrome RecursivePalindrome/main.cpp)
add_executable(BinarySearchTree BinarySearchTree/main.cpp)
add_executable(bubblesort bubblesort/main.cpp)
add_executable(selectionsort selectionsort/main.cpp)
add_executable(insertionsort insertionsort/main.cpp)
add_executable(shellsort shellsort/main.cpp)
add_executable(quicksort quicksort/main.cpp)
add_executable(bstsort bstsort/main.cpp)
add_executable(mergesort mergesort/main.cpp)